feat: update payment - week 4
